--- a/playbook.yaml
+++ b/playbook.yaml
@@ -48,6 +48,8 @@
           - git
           - curl
           - tree
+          - python3
+          - python3-pip
         state: present
 
     # jitsi
